--- a/MMO_Client/MMO_Client.csproj
+++ b/MMO_Client/MMO_Client.csproj
@@ -18,6 +18,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\Cod_Pers\Interfaz\Interfaz.csproj" />
+    <ProjectReference Include="..\..\..\Visual_Studio\Interfaz\Interfaz.csproj" />
   </ItemGroup>
 </Project>
