--- a/MMO_Client/MMO_Client.csproj
+++ b/MMO_Client/MMO_Client.csproj
@@ -3,6 +3,11 @@
     <TargetFrameworks>net6.0-windows</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Controllers\WorldController.backup.cs" />
+    <Compile Remove="Models\Tile.backup.cs" />
+    <Compile Remove="Models\World.backup.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="Stride.Engine" Version="4.1.0.1805" />
     <PackageReference Include="Stride.Video" Version="4.1.0.1805" />
